fix(frontend): update spacings

--- a/web/src/app/features/ponies/pages/list/list.component.scss
+++ b/web/src/app/features/ponies/pages/list/list.component.scss
@@ -42,10 +42,10 @@
 }
 
 .pony-list {
-    margin-top: 80px;
+    margin-top: 70px;
     display: flex;
     flex-wrap: wrap;
-    gap: 100px 25px;
+    gap: 80px 25px;
 }
 
 .create-pony {
